feat(java): have a way to return Arrow vectors back from Vortex